# 42-Fly-in

./: .gitignore  Makefile  README.md  output.txt  pyproject.toml
maps/custom/: 02_real_graph.txt
maps/customs/: 01_split.txt  02_real_graph.txt  04_no_connections.txt  06_no_end_node.txt  07_no_start_node.txt  09_start_hub_blocked.txt  10_check_priority.txt  11_end_is_restricted.txt
maps/easy/: 01_linear_path.txt
maps/errors/: 06_metadata_unknown_zone.txt
maps/hard/: 02_capacity_hell.txt
src/: ArgsParser.py  Connection.py  Connections.py  Drone.py  Enums.py  Graphics.py  Hub.py  Level.py  LevelLoader.py  Map.py  MapLoader.py  MapSelector.py  OutputFile.py  Solver.py  __init__.py  __main__.py  args_parser.py  map_loader.py  output_file.py
src/algo/: dinic.py
src/algo/bfs/: __init__.py  bfs.py  bfs_edge.py  bfs_node.py  bfs_object.py
src/algo/dfs/: __init__.py  dfs.py  (+3 more)
src/errors/: FileError.py  FlyInError.py  ParseError.py  __init__.py
src/network/: __init__.py  network.py  network_object.py
src/render/: __init__.py  core_render.py  environment.py
src/renderer/: ColorMap.py  ConnectionRenderer.py  CoreRenderer.py  DronesRenderer.py  Environement.py  EnvironementRenderer.py  Environment.py  EnvironmentRenderer.py  Galaxy.py  HubRenderer.py  InputController.py  NodeRenderer.py  RayCast.py  Renderer.py  SkyBox.py  UIRenderer.py  __init__.py
src/shaders/: Galaxy.py  Shader.py
src/utils/: Bezier.py  Color.py  Logger.py  MathUtils.py  StrUtils.py  __init__.py  bezier.py  color.py  logger.py
tests/: __init__.py  __main__.py  test_all_map.py
(+75 files in other folders)
