[project]
name = "fly-in"
version = "0.1.0"
description = "Fly in - 42 Common Core - Milestone 3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "questionary>=2.1.1",
    "raylib>=5.5.0.4",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.0",
]
